# FFmpegExamples

./: README.md
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/androidTest/java/com/whimaggot/os/ffmpegtest/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/decode/: CMakeLists.txt  ffmpeg_core.cpp  ffmpeg_core.h  ffmpeg_decode.cpp  ffmpeg_decode.h
app/src/main/cpp/decode/ffmpeg/: ffmpeg.c
app/src/main/cpp/include/: cmdutils.h  config.h  ffmpeg.h
app/src/main/cpp/include/libavutil/: ffversion.h  internal.h
app/src/main/cpp/info/: CMakeLists.txt  ffmpeg_info.cpp  ffmpeg_info.h  ffmpeg_tool.cpp  ffmpeg_tool.h
app/src/main/java/com/whimaggot/os/ffmpegtest/: FFmpegCoreActivity.java  FFmpegDecodeActivity.java  FFmpegInfoActivity.java  FFmpegRtmpActivity.java  FFmpegToolsActivity.java  MainActivity.java
app/src/main/java/com/whimaggot/os/ffmpegtest/utils/: ToastHelper.java
app/src/main/jniLibs/armeabi/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libpostproc.pc  libswresample.pc  libswscale.pc
app/src/main/res/layout/: activity_core.xml  activity_decode.xml  activity_info.xml  activity_main.xml  activity_rtmp.xml  activity_tool.xml
app/src/test/java/com/whimaggot/os/ffmpegtest/: ExampleUnitTest.java
